# weather

./: README.md  pyproject.toml  setup.py
src/weather/: weather.py
tests/: test_weather.py
