[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-library"
version = "0.1.0"
description = "A library for fetching and formatting weather data."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "pyquery",
    "requests"
]

[tool.setuptools]
packages = ["weather"]
package-dir = { "" = "src" }